<resources>
    <string name="app_name">干柴</string>
    <string name="app_description">专注于Android干货资源</string>
    <string name="app_github"><a href="https://github.com/openproject/AndroidDigest">干柴的Github</a></string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_confirm">确定</string>
    <string name="action_negative">取消</string>

    <string name="tab_home_text">最新</string>
    <string name="tab_blog_text">站点/博客</string>
    <string name="tab_tool_text">工具箱</string>
    <string name="tab_more_text">更多</string>
    <string name="tab_more_menu_setting">设置</string>
    <string name="tab_more_menu_developers">开发小组</string>
    <string name="title_activity_joke_detail">正文</string>
    <string name="title_activity_web_view">正文</string>
    <string name="title_activity_offline">离线列表</string>
    <string name="title_activity_tool_list">工具箱列表</string>
    <string name="title_activity_review_digest_add">加根干柴</string>
    <string name="title_activity_search">搜索</string>

    <string name="tool_category_compoment_title">控件</string>
    <string name="tool_category_compoment_description">绚丽效果、功能强大的组件大全</string>
    <string name="tool_category_library_title">类库</string>
    <string name="tool_category_library_description">提高开发效率，解决某些问题的一些框架等</string>
    <string name="tool_category_tool_title">工具</string>
    <string name="tool_category_tool_description">开发、设计、测试相关的辅助性工具</string>
    <string name="tool_category_code_title">代码</string>
    <string name="tool_category_code_description">实用片段、奇技淫巧</string>
    <string name="tool_category_design_title">设计</string>
    <string name="tool_category_design_description">图赏好的设计，激活灵感</string>
    <string name="tool_category_project_title">项目</string>
    <string name="tool_category_project_description">完整的开源Android项目</string>

    <string name="search_digest_text">文摘</string>
    <string name="search_digest_tool">工具</string>

    <string name="settings_title">设置</string>
    <string name="settings_rating_title">喜欢干柴</string>
    <string name="settings_confirm_wipecache">"您确定要清除缓存吗?"</string>
    <string name="settings_rating_description">去应用市场给干柴打分</string>
    <string name="settings_rating_no_market">没找到应用市场</string>
    <string name="settings_update_title">版本更新</string>
    <string name="settings_update_description">当前版本: </string>
    <string name="settings_update_no_update">未检测到新版本</string>
    <string name="settings_wipe_cache_title">清除缓存</string>
    <string name="settings_wipe_cache_description">当前缓存: </string>
    <string name="settings_about_us_title">关于</string>
    <string name="settings_about_us_description">关于干柴</string>

    <string name="settings_about_developers_feng_details_realname">冯建</string>
    <string name="settings_about_developers_feng_details_name">昵称：谦虚的天下</string>
    <string name="settings_about_developers_feng_details_blog">博客地址：http://cnblogs.com/qianxudetianxia</string>
    <string name="settings_about_developers_feng_details_qq">QQ：673592063</string>
    <string name="settings_about_developers_feng_details_weibo">微博地址：http://weibo.com/xiaofengjian?from=profile&amp;wvr=6</string>

    <string name="settings_about_developers_gracker_details_realname">高建武</string>
    <string name="settings_about_developers_gracker_details_name">昵称：Gracker</string>
    <string name="settings_about_developers_gracker_details_blog">博客地址：http://androidperformance.com</string>
    <string name="settings_about_developers_gracker_details_qq">QQ：553000664</string>
    <string name="settings_about_developers_gracker_details_weibo">微博地址：http://www.weibo.com/u/1315612820?from=feed&amp;loc=nickname</string>

    <string name="about_us_title">关于</string>
</resources>
