<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@color/primary"
        android:minHeight="@dimen/abc_action_bar_default_height_material" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="?attr/selectableItemBackground"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:text="@string/settings_about_developers_feng_details_realname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textIsSelectable="true"
            android:text="@string/settings_about_developers_feng_details_name" />

        <TextView
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/settings_about_developers_feng_details_blog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textIsSelectable="true"
            android:text="@string/settings_about_developers_feng_details_qq" />

        <TextView
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/settings_about_developers_feng_details_weibo" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:text="@string/settings_about_developers_gracker_details_realname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textIsSelectable="true"
            android:text="@string/settings_about_developers_gracker_details_name" />

        <TextView
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/settings_about_developers_gracker_details_blog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textIsSelectable="true"
            android:text="@string/settings_about_developers_gracker_details_qq" />

        <TextView
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/settings_about_developers_gracker_details_weibo" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ddd" />
</LinearLayout>