<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@color/primary"
        android:minHeight="@dimen/abc_action_bar_default_height_material" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="80sp"
            android:textStyle="bold"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/app_description" />

        <TextView
            android:id="@+id/about_us_versionname"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/about_us_githubpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_github"
            android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>